# sistema-bot

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  BLUEPRINT.md  G1_bot.js  G1_client.html  G1_server.js  G2_bot.js  G2_client.html  G2_server.js  G3_bot.js  G3_client.html  G3_server.js  G4_bot.js  G4_client.html  G4_server.js  G5_bot.js  G5_client.html  G5_server.js  G6_bot.js  G6_client.html  G6_server.js  MIGLIORAMENTI.md  README.md  ads.txt  bot-core.js  dashboard.py  database.py  deploy.sh  docker-compose.yml  gateway.js  index.html  index.icon.png.import  index.pck  monetization.js  netlify.toml  package-lock.json.bak  pyproject.toml  (+4 more)
.github/workflows/: deploy-pages.yml
.opencode/skills/: design-dna.md  gen-jutsu.md  gsap.md  loop.md  motion-design.md  three-d.md
agents/: main.py
frearcade/: QUALITY_REVIEW.md  ads.txt  index.html
frearcade/3d/: engine3d.js
frearcade/data/: bridge.js  content-db.js  data-loader.js  generate-data.js  procgen.js
frearcade/games/: arena-shooter.js  block-breaker.js  engine.js  fortress.js  maze-runner.js  multiplayer.js  rungun.js  save.js  snake-evolved.js  space-blaster.js  twin-stick.js
game-factory/: .gitignore
game-factory/engine/: game_core.gd  game_core.tscn
game-factory/hub/: hub.gd  hub.tscn
scripts/: backup.py  firebase-crea.sh  generate_profiles.py  setup-completo.sh  setup.py  wiki_source.py
src/: __init__.py  system.py  wiki_hook.py
src/adapters/: __init__.py  base.py  instagram.py  tiktok.py  (+1 more)
tests/: test_core.py
web/: next.config.js  package.json  tsconfig.json
(+126 files in other folders)
